# clovervm

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  FOR_LOOP_PLAN.md  LICENSE  README.md  TODO.md
benchmark/: CMakeLists.txt  bench_interpreter.cpp  builtin_lookup.cpp  builtin_lookup.py  class_attribute_read.cpp  class_attribute_read.py  class_attribute_write.cpp  class_attribute_write.py  class_instantiation.cpp  class_instantiation.py  class_instantiation_with_init.cpp  class_instantiation_with_init.py  class_method_loop.py  cpp_benchmarks.h  cpython_runner.py  exception_bare_handler_no_raise.cpp  exception_bare_handler_no_raise.py  exception_bare_handler_raise.cpp  exception_bare_handler_raise.py  exception_typed_handler_no_raise.cpp  exception_typed_handler_no_raise.py  exception_typed_handler_raise.cpp  exception_typed_handler_raise.py  fib.py  for_loop.cpp  for_loop.py  for_loop_slow_path.cpp  for_loop_slow_path.py  function_default_parameter.cpp  function_default_parameter.py  function_default_varargs.cpp  function_default_varargs.py  function_keyword.cpp  function_keyword.py  function_keyword_default.cpp  function_keyword_default.py  function_keyword_mixed.cpp  function_keyword_mixed.py  function_kwargs_capture.cpp  function_kwargs_capture.py  (+88 more)
dependencies/: CMakeLists.txt
dependencies/absl/: CMakeLists.txt
dependencies/googlebenchmark/: CMakeLists.txt  CMakeLists.txt~
src/: CMakeLists.txt  alloc.h  ast.h  ast_print.h  ast_printer.h  attr.cpp  attr.h  attribute_cache.h  attribute_descriptor.cpp  attribute_descriptor.h  bool.cpp  bool.h  build_config.h.in  builtin_class_registry.h  builtin_function.cpp  builtin_function.h  builtins.cpp  builtins.h  builtins.inc.in  builtins.py  bytecode.h  cj_alloc.h  cj_object.h  cj_persistent_list.h  cj_short_vector.h  cj_string.h  cj_value.h  cl_alloc.h  cl_klass.c  cl_klass.cpp  cl_klass.h  cl_object.h  cl_persistent_list.cpp  cl_persistent_list.h  cl_refcount.h  cl_short_vector.cpp  cl_short_vector.h  cl_string.c  cl_string.cpp  cl_string.h  (+167 more)
src/api/: clover_api.cpp  clover_entry.cpp  clover_entry.h  extension_api.cpp  extension_handle.cpp  extension_handle.h  native_module_api.cpp
src/bootstrap/: build_config.h.in  builtins.cpp  builtins.h  builtins.py  sys.py
src/builtin_types/: bigint.cpp  bigint.h  bool.cpp  bool.h  bytes.cpp  bytes.h  dict.cpp  dict.h  dict_view.cpp  dict_view.h  ellipsis_type.cpp  ellipsis_type.h  float.cpp  float.h  hash.cpp  hash.h  int.cpp  int.h  intern_store.h  list.cpp  list.h  list_iterator.cpp  list_iterator.h  module_loader_object.cpp  module_loader_object.h  module_object.cpp  module_object.h  module_spec_object.cpp  module_spec_object.h  none_type.cpp  none_type.h  not_implemented_type.cpp  not_implemented_type.h  range_iterator.cpp  range_iterator.h  slice.cpp  slice.h  str.cpp  str.h  string_builder.cpp  (+9 more)
src/bytecode/: bytecode.def  bytecode.h  bytecode_decoder.cpp  bytecode_decoder.h  bytecode_instruction.cpp  bytecode_instruction.h  code_object.cpp  code_object.h  code_object_builder.cpp  code_object_builder.h  code_object_print.h
src/cli/: clovervm.cpp  repl.cpp  repl.h
src/compiler/: ast.h  ast_print.h  codegen.cpp  codegen.h  codegen_scope_analysis.cpp  codegen_scope_analysis.h  compilation_unit.h  parser.cpp  parser.h  scope.cpp  scope.h  source_text.cpp  source_text.h  token.cpp  token.h  token_print.h  tokenizer.cpp  tokenizer.h
src/import_system/: import_system.cpp  import_system.h  module_finder.cpp  module_finder.h  module_global.cpp  module_global.h  module_global_cache.h  module_global_descriptor.h  native_extension_loader.cpp  native_extension_loader.h  native_extension_loader_internal.h  native_extension_loader_posix.cpp
src/jit/: aarch64_allocation_constraints.cpp  aarch64_allocation_constraints.h  aarch64_assembler.cpp  aarch64_assembler.h  aarch64_cfg_emitter.cpp  aarch64_cfg_emitter.h  allocation_constraints.cpp  allocation_constraints.h  cfg_verifier.cpp  cfg_verifier.h  code_cache.cpp  code_cache.h  code_cache_types.h  compilation_arena.cpp  compilation_arena.h  compilation_session.cpp  compilation_session.h  control_flow_graph.cpp  control_flow_graph.h  core_ir.h  graph_builder.cpp  graph_builder.h  graph_queries.cpp  graph_queries.h  graph_rewriter.cpp  graph_rewriter.h  instruction.cpp  instruction.def  instruction.h  instruction_pool.cpp  instruction_pool.h  instruction_reconstruction.h  instruction_traversal.h  machine_address.h  machine_address_internal.h  machine_code_emitter.h  map_jit_code_memory.cpp  map_jit_code_memory.h  object_pool.h  physical_register.cpp  (+8 more)
src/memory/: global_heap.cpp  global_heap.h  heap_constants.h  heap_construction.h  heap_reclamation.cpp  heap_reclamation.h  native_layout_descriptor.cpp  native_layout_descriptor.h  native_layout_id.h  native_layout_registry.h  slab_allocator.cpp  slab_allocator.h  thread_local_heap.cpp  thread_local_heap.h
src/native/: native_handle.cpp  native_handle.h  native_layout_declarations.h  native_layout_descriptor.cpp  native_layout_descriptor.h  native_layout_id.h  native_layout_registry.h  native_module_api.cpp  native_module_api_internal.h  native_module_loader.cpp  (+2 more)
src/util/: result.h  (+1 more)
tests/: CMakeLists.txt  jit_code_cache_test_support.h  test_aarch64_allocation_constraints.cpp  test_aarch64_assembler.cpp  test_aarch64_execution.cpp  test_attr.cpp  test_bigint.cpp  test_bytecode.cpp  test_code_cache.cpp  test_codegen.cpp  test_dict.cpp  test_exception_handling.cpp  test_hash.cpp  test_heap.cpp  test_heap_reclamation.cpp  test_helpers.h  test_import_system.cpp  test_interpreter.cpp  test_jit_allocation_constraints.cpp  test_jit_arena.cpp  test_jit_cfg.cpp  test_jit_graph_rewrites.cpp  test_list.cpp  test_machine_address.cpp  test_machine_code_emitter.cpp  test_map_jit.cpp  test_module_global.cpp  test_module_object.cpp  test_native_layout_descriptor.cpp  test_native_module_build.cpp  test_owned.cpp  test_owned2.cpp  test_parser.cpp  test_python_source_files.cpp  test_result.cpp  test_safepoint_reclamation.cpp  test_scope.cpp  test_shape.cpp  test_thread_state.cpp  test_tokenizer.cpp  (+5 more)
(+232 files in other folders)
